required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.


Current Version (5.1-dev, SVN trunk):
-------------------------------------

- AGG: switch alpha buffer when drawing query layer

- Fixed legend icons not drawing when using maxscaledenom

- AGG: fix embedded scalebar rendering when using postlabelcache (#2327)

- AGG: allow for fast and aliased rendering of simple lines and polygons
  thick lines and patterns (i.e. dashes)aren't supported.
  this is triggered when the symbol is of TYPE SYMBOL *and* its ANTIALIAS is off
  (wating to find a better solution to trigger this).

- AGG: the pixmap of pixmap symbols is now cached in an agg-compatible state the first
  time it is accessed. this avoids rereading and retransforming it each time that 
  symbol is used.

- AGG: the imageObj now stores in what state it's alpha channel is in. The number of
  msAlphaGD2AGG/AGG2GD calls is now reduced, but most importantly each of these calls
  is usually just a check for this state and does no computation.
  
- AGG: fixed a few artifacts in embedded legend rendering on rgba images.

- Fixed modulus operator in the parser (#2323)

- maprasterquery.c: Fix crash when queryies on done on raster layers with 
  no styles (#2343)

- maprasterquery.c: Modify msRASTERLayerOpen() to create a defaulted raster
  layer info if there isn't one, to avoid the errors about open only being
  supported after a query.  Also wipe the raster layer info in case of 
  an empty result set, or failures of a query to reduce likelyhood of 
  leaking the raster layer info. 


Version 5.0.0 (2007-09-17)
--------------------------

- AGG: Fix angle computation for truetype marker symbols on lines (#2316) 
